@@ -1,58 +1,11 @@
 plugins {
-    id 'java'
-    id "org.sonarqube" version "4.4.1.3373"
-    id 'org.springframework.boot' version "3.2.1"
-    id 'io.spring.dependency-management' version "1.1.4"
-    id "jacoco"
-}
-
-test {
-    useJUnitPlatform()
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    id "dolly-apps"
 }
 
 sonarqube {
     properties {
-        property "sonar.dynamicAnalysis", "reuseReports"
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.language", "java"
-        property "sonar.token", System.getenv("SONAR_TOKEN")
-        property "sonar.organization", "navikt"
-        property "sonar.project.monorepo.enabled", true
         property "sonar.projectKey", "testnav-dolly-backend"
         property "sonar.projectName", "testnav-dolly-backend"
-        property "sonar.sourceEncoding", "UTF-8"
-    }
-}
-
-bootJar {
-    archiveFileName = "app.jar"
-    mainClass = 'no.nav.dolly.DollyBackendApplicationStarter'
-}
-
-dependencyManagement {
-    applyMavenExclusions = false
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'
-    }
-}
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
-}
-
-repositories {
-    mavenCentral()
-    maven {
-        name = "GitHubPackages"
-        url = uri('https://maven.pkg.github.com/navikt/maven-release')
-        credentials(PasswordCredentials) {
-            password System.getenv("NAV_TOKEN")
-            username 'token'
-        }
     }
 }
 
@@ -67,53 +20,45 @@ dependencies {
     implementation 'no.nav.testnav.libs:data-transfer-search-objects'
     implementation 'no.nav.testnav.libs:reactive-core'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
-    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
-
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
-    implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.20'
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$versions.springdoc"
+    implementation "io.swagger.core.v3:swagger-annotations-jakarta:$versions.swagger"
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.retry:spring-retry:2.0.5'
+    implementation 'org.springframework.retry:spring-retry'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
-    implementation 'org.opensearch.client:spring-data-opensearch:1.3.0'
+    implementation "org.opensearch.client:spring-data-opensearch:$versions.opensearch"
 
-    implementation 'org.apache.commons:commons-lang3:3.14.0'
+    implementation 'org.apache.commons:commons-lang3'
     implementation 'org.springframework.boot:spring-boot-starter-cache'
     implementation 'com.github.ben-manes.caffeine:caffeine'
 
     implementation 'org.ehcache:ehcache:3.10.8'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
+    implementation "com.fasterxml.jackson.core:jackson-core:$versions.jackson"
+
     implementation 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-core'
-    implementation 'io.micrometer:micrometer-registry-prometheus'
-    implementation 'ma.glasnost.orika:orika-core:1.5.4'
-    implementation 'org.codehaus.jettison:jettison:1.5.4'
-    implementation 'org.apache.poi:poi:5.2.5'
-    implementation 'org.apache.poi:poi-ooxml:5.2.5'
+    implementation 'org.flywaydb:flyway-database-postgresql'
 
-    testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation 'org.opensearch:opensearch-testcontainers:2.0.0'
+    implementation "ma.glasnost.orika:orika-core:$versions.orika"
+    implementation 'org.codehaus.jettison:jettison:1.5.4'
+    implementation "org.apache.poi:poi:$versions.apachePoi"
+    implementation "org.apache.poi:poi-ooxml:$versions.apachePoi"
+
+    testImplementation 'org.opensearch:opensearch-testcontainers:2.0.1'
 
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
     testImplementation 'com.h2database:h2'
-    testImplementation 'io.projectreactor:reactor-test:3.5.4'
+    testImplementation "io.projectreactor:reactor-test:$versions.reactorTest"
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
-    testImplementation 'org.bitbucket.b_c:jose4j:0.9.3'
+    testImplementation 'org.bitbucket.b_c:jose4j:0.9.6'
 
-    implementation 'net.java.dev.jna:jna:5.13.0'
-
-    annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
+    implementation 'net.java.dev.jna:jna:5.14.0'
 }
